# liaweb

./: .db_bootstrapped  .env  README.md  README_SCHEMAS.md  RESUME_INTEGRATION_SCHEMAS.md  RESUME_PERSISTANCE_SESSION.md  add_nom_fichier_original_column.sql  bootstrap_buttons_demo.html  bootstrap_components_demo.html  bootstrap_forms_demo.html  bootstrap_layout_demo.html  bootstrap_navigation_demo.html  bootstrap_typography_demo.html  bootstrap_utilities_demo.html  check_password_recovery.py  check_ressource_elearning_table.sql  check_validated_candidates.py  debug_stats.py  exemple_utilisation_montures.py  exemple_utilisation_schemas.py  fix_database_issues.sql  fontawesome_icons_demo.html  main.py  migrate_ressource_elearning.sql  pyproject.toml  requirements.txt  reset_admin_password.sql  setup_password_recovery.py  setup_program_schemas.py  test_suivi_mensuel.py  test_suivi_mensuel_business.py  verify_migration.sql
app/: main.py  setup_database.py
core/: cleanup_scheduler.py  cloudflare_tunnel.py  config.py  database.py  enum_middleware.py  init_postgres.sql  middleware.py  path_config.py  pdf_dynamique.py  permissions.py  program_schema_integration.py  program_schema_middleware.py  security.py  traiter_zip_excel.py  utils.py
docs/: ELEARNING_ARCHITECTURE.md  ELEARNING_SYSTEM.md  PASSWORD_RECOVERY_SYSTEM.md  PERMISSIONS_ARCHIVE_SYSTEM.md  PROGRAM_SCHEMAS_IMPLEMENTATION.md  PROGRAM_SCHEMAS_SIMPLE_IMPLEMENTATION.md  RENDEZ_VOUS_SYSTEM.md
fichiers/: entreprise_data.csv
models/: base.py  enums.py
routers/: __init__.py  accueil.py  auth.py  candidat_email_update.py  candidats.py  dashboard.py  documents.py  emargement_router.py  inscriptions.py  jury.py  pages.py  pipelines.py  programmes.py  rendez_vous.py  video_router.py
schemas/: __init__.py  auth_schemas.py  candidat_schemas.py  decision_jury_schemas.py  document_schemas.py  entreprise_schemas.py  inscription_schemas.py  jury_schemas.py  pipeline_schemas.py  preinscription_schemas.py  recherche_schemas.py  rendez_vous_schemas.py  user_schemas.py
(+359 files in other folders)
