[project]
name = "lia-coaching"
version = "0.1.0"
description = "Application de gestion de coaching LIA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "sqlmodel==0.0.24",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.10.1",
    "python-multipart==0.0.20",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "jinja2==3.1.6",
    "aiofiles==24.1.0",
    "requests==2.32.5",
    "python-dateutil==2.9.0.post0",
    "slowapi==0.1.9",
    "itsdangerous==2.2.0",
    "jose==1.0.0",
    "pydantic==2.11.7",
    "email-validator==2.3.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "bcrypt==4.3.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.7",
    "deprecated==1.2.18",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "limits==5.5.0",
    "markupsafe==3.0.2",
    "packaging==25.0",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "starlette==0.47.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "wrapt==1.17.3",
    "psycopg2>=2.9.10",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
